Fix speaking icon colour and improve contrast on updoot arrows

--- a/frontend/src/static_original/style.css
+++ b/frontend/src/static_original/style.css
@@ -450,7 +450,7 @@ output {
 	fill: none;
 }
 
-[aria-disabled=true] .audio-icon {
+[aria-pressed=true] .audio-icon {
 	fill: #2e2c2c;
 }
 
